--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
               <div class="card-info">
                 <h2>ToDo List</h2>
                 <h3>Javascript</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
                 <button class="btn">Saiba Mais</button>
               </div><!-- card-info -->
-            </div><!-- 	'' -->
+            </div><!-- card -->
             <div class="card">
               <div class="card-img-wrapper">
                 <img src="images/proj2.jpg" alt="imagem do projeto Maratona" />
@@ -149,7 +149,7 @@
               <div class="card-info">
                 <h2>Casa Bela</h2>
                 <h3>HTML</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
                 <button class="btn">Saiba Mais</button>
               </div><!-- card-info -->
             </div><!-- card -->
@@ -218,8 +218,8 @@
 					<li><a href=""><i class="fab fa-instagram"></i></a></li>
 					<li><a href=""><i class="fab fa-twitter"></i></a></li>
 				</ul>
-			</div>
-		</div>
+			</div><!-- social-list -->
+		</div><!-- footer-content -->
 	</footer>
 
 	<a href="#home" id="link-topo">
