--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-    <title>Portifólio</title>
+    <title>HS Orçamento</title>
  </head>
  <body>
  	<div class="container">
@@ -25,8 +22,8 @@
                 <img src="images/bg.jpg" alt="">
             </div>
             <div class="banner">
-                <h1>Web Developer & Front End Designer</h1>
-                <p>Huxley Davi</p>
+                <h1>Orçamentos HS</h1>
+                <p>Faça já o seu</p>
                 <button>Saiba mais</button>
             </div>
         </header>
@@ -34,127 +31,18 @@
         <asside class="sidebar">
         	<nav>
         		<ul class="menu">
-        			<li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-        			<li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
-        			<li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+        			<li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
         			<li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
         			<li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
         		</ul><!-- menu -->
         	</nav>
 
 	        <div class="social-media">
-	        	<a href="#"><i class="fab fa-facebook-f"></i></a>
-	        	<a href="#"><i class="fab fa-github-alt"></i></a>
-	        	<a href="#"><i class="fab fa-twitter"></i></a>
+			    <a href="https://www.instagram.com/hs.corp/"><i class="fab fa-instagram"></i></a>
+	        	<a href="https://t.me/+ZJ0PXy94GLAzMDc5"><i class="fab fa-telegram"></i></a>
+	        	<a href="https://wa.me/5533998023970?text=Ol%C3%A1%2C+me+interessei+em+um+de+seus+produtos%2C+pode+me+ajudar%3F"><i class="fab fa-whatsapp"></i></a>
 	        </div>
 		</asside><!-- sidebar -->
-
-		 <section class="sessao-conhecimentos" id="conhecimentos">
-			<div class="sessao-header">
-			<h1>Conhecimentos</h1>
-			</div><!-- sessao-header -->
-			<div class="conhecimentos">
-			<div class="conhecimento">
-			  <div class="conhecimento-header">
-			    <i class="fab fa-html5"></i>
-			    <h3>HTML</h3>
-			  </div><!-- conhecimento-header -->
-			  <div class="conhecimento-text">
-			    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
-			  </div><!-- conhecimento-text -->
-			</div><!-- conhecimento -->
-			<div class="conhecimento">
-			  <div class="conhecimento-header">
-			    <i class="fab fa-css3-alt"></i>
-			    <h3>CSS</h3>
-			  </div><!-- conhecimento-header -->
-			  <div class="conhecimento-text">
-			    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur asperiores incidunt quod, sed aspernatur eos commodi ex nostrum consequuntur aut vero cum illum perferendis earum, eveniet hic itaque. Quod.</p>
-			  </div><!-- conhecimento-text -->
-			</div><!-- conhecimento -->
-			<div class="conhecimento">
-			  <div class="conhecimento-header">
-			    <i class="fas fa-pencil-alt"></i>
-			    <h3>Design</h3>
-			  </div><!-- conhecimento-header -->
-			  <div class="conhecimento-text">
-			    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?</p>
-			  </div><!-- conhecimento-text -->
-			</div><!-- conhecimento -->
-			<div class="conhecimento">
-			  <div class="conhecimento-header">
-			    <i class="fab fa-js"></i>
-			    <h3>Javascript</h3>
-			  </div><!-- conhecimento-header -->
-			  <div class="conhecimento-text">
-			    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas facere alias, reprehenderit ullam quibusdam itaque dolor nulla odio inventore culpa molestiae porro ea ad illo, quos dicta ratione quisquam?
-			    </p>
-			  </div><!-- conhecimento-text -->
-			</div><!-- conhecimento -->
-			<div class="conhecimento">
-			  <div class="conhecimento-header">
-			    <i class="fab fa-bootstrap"></i>
-			    <h3>Bootstrap</h3>
-			  </div><!-- conhecimento-header -->
-			  <div class="conhecimento-text">
-			    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sequi, quas illo dolor totam voluptas pariatur harum blanditiis veritatis culpa doloremque aspernatur nesciunt dicta iure fuga similique ad, ut impedit.</p>
-			  </div><!-- conhecimento-text -->
-			</div><!-- conhecimento -->
-			<div class="conhecimento">
-			  <div class="conhecimento-header">
-			    <i class="fab fa-github"></i>
-			    <h3>Git e GitHub</h3>
-			  </div><!-- conhecimento-header -->
-			  <div class="conhecimento-text">
-			    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet facilis distinctio quaerat eaque ratione, molestias incidunt a iusto, unde quos magnam ullam exercitationem velit alias, fuga in explicabo ex laborum!</p>
-			  </div><!-- conhecimento-text -->
-			</div><!-- conhecimento -->
-			<div class="conhecimentos-img-wrapper">
-				<img src="images/conhecimentos.png" alt="Imagem Conhecimento">
-			</div>
-        </section><!-- sessao-conhecimentos -->
-
-	<section class="sessao-projetos">
-		<div class="sessao-projetos" id="projetos">
-          <div class="sessao-header">
-            <h1>Projetos</h1>
-          </div><!-- sessao-header -->
-          <div class="projetos">
-            <div class="card">
-              <div class="card-img-wrapper">
-                <img src="images/proj1.jpg" alt="imagem do projeto ToDo" />
-              </div><!-- card-img-wrapper -->
-              <div class="card-info">
-                <h2>ToDo List</h2>
-                <h3>Javascript</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
-                <button class="btn">Saiba Mais</button>
-              </div><!-- card-info -->
-            </div><!-- card -->
-            <div class="card">
-              <div class="card-img-wrapper">
-                <img src="images/proj2.jpg" alt="imagem do projeto Maratona" />
-              </div><!-- card-img-wrapper -->
-              <div class="card-info">
-                <h2>Maratona</h2>
-                <h3>HTML, CSS</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
-                <button class="btn">Saiba Mais</button>
-              </div><!-- card-info -->
-            </div><!-- card -->
-            <div class="card">
-              <div class="card-img-wrapper">
-                <img src="images/proj3.jpg" alt="imagem do projeto Casa Bela" />
-              </div><!-- card-img-wrapper -->
-              <div class="card-info">
-                <h2>Casa Bela</h2>
-                <h3>HTML</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
-                <button class="btn">Saiba Mais</button>
-              </div><!-- card-info -->
-            </div><!-- card -->
-          </div><!-- projetos -->
-	</section><!-- sessao-projetos -->
 
 	<section class="sessao-contato" id="contato">
 		<div class="contato-wrapper">
@@ -214,9 +102,9 @@
 			</p>
 			<div class="social-list">
 				<ul>
-					<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-					<li><a href=""><i class="fab fa-instagram"></i></a></li>
-					<li><a href=""><i class="fab fa-twitter"></i></a></li>
+                    <a href="https://www.instagram.com/hs.corp/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://t.me/+ZJ0PXy94GLAzMDc5"><i class="fab fa-telegram"></i></a>
+                    <a href="https://wa.me/5533998023970?text=Ol%C3%A1%2C+me+interessei+em+um+de+seus+produtos%2C+pode+me+ajudar%3F"><i class="fab fa-whatsapp"></i></a>
 				</ul>
 			</div><!-- social-list -->
 		</div><!-- footer-content -->
