--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
-	<link rel="manifest" href="/site.webmanifest">
-    <title>HS Orçamento</title>
+    <title>HS Orçamentos</title>
  </head>
  <body>
  	<div class="container">
@@ -22,8 +22,8 @@
                 <img src="images/bg.jpg" alt="">
             </div>
             <div class="banner">
-                <h1>Orçamentos HS</h1>
-                <p>Faça já o seu</p>
+                <h1>HS Orçamentos</h1>
+                <p>Clique no botão e faça já o seu!</p>
                 <button>Saiba mais</button>
             </div>
         </header>
@@ -38,9 +38,9 @@
         	</nav>
 
 	        <div class="social-media">
-			    <a href="https://www.instagram.com/hs.corp/"><i class="fab fa-instagram"></i></a>
-	        	<a href="https://t.me/+ZJ0PXy94GLAzMDc5"><i class="fab fa-telegram"></i></a>
-	        	<a href="https://wa.me/5533998023970?text=Ol%C3%A1%2C+me+interessei+em+um+de+seus+produtos%2C+pode+me+ajudar%3F"><i class="fab fa-whatsapp"></i></a>
+			    <a href="https://www.instagram.com/hs.corp/" target="_blank"><i class="fa fa-instagram"></i></a>
+	        	<a href="https://t.me/+ZJ0PXy94GLAzMDc5" target="_blank"><i class="fa fa-telegram"></i></a>
+	        	<a href="https://wa.me/5533998023970?text=Ol%C3%A1%2C+me+interessei+em+um+de+seus+produtos%2C+pode+me+ajudar%3F" target="_blank"><i class="fa fa-whatsapp"></i></a>
 	        </div>
 		</asside><!-- sidebar -->
 
@@ -102,16 +102,16 @@
 			</p>
 			<div class="social-list">
 				<ul>
-                    <a href="https://www.instagram.com/hs.corp/"><i class="fab fa-instagram"></i></a>
-                    <a href="https://t.me/+ZJ0PXy94GLAzMDc5"><i class="fab fa-telegram"></i></a>
-                    <a href="https://wa.me/5533998023970?text=Ol%C3%A1%2C+me+interessei+em+um+de+seus+produtos%2C+pode+me+ajudar%3F"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/hs.corp/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://t.me/+ZJ0PXy94GLAzMDc5" target="_blank"><i class="fa fa-telegram"></i></a>
+                    <a href="https://wa.me/5533998023970?text=Ol%C3%A1%2C+me+interessei+em+um+de+seus+produtos%2C+pode+me+ajudar%3F" target="_blank"><i class="fa fa-whatsapp"></i></a>
 				</ul>
 			</div><!-- social-list -->
 		</div><!-- footer-content -->
 	</footer>
 
 	<a href="#home" id="link-topo">
-		<i class="fas fa-arrow-up"></i>
+		<i class="fa fa-arrow-up"></i>
 	</a>
 	</div><!-- container -->
 </body>
