--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <title>HS Orçamentos</title>
+    <title>HS Corporation</title>
  </head>
  <body>
  	<div class="container">
@@ -22,7 +22,7 @@
                 <img src="images/bg.jpg" alt="">
             </div>
             <div class="banner">
-                <h1>HS Orçamentos</h1>
+                <h1>HS Corporation</h1>
                 <p>Clique no botão e faça já o seu!</p>
                 <button>Saiba mais</button>
             </div>
